# CondaProject

./: CMakeLists.txt  README.md  main.cpp
libs/hellolib/: CMakeLists.txt  hello.cpp  hello.h
libs/messagelib/: CMakeLists.txt  message.cpp  message.h
output/: channeldata.json  index.html
output/linux-64/: conda-project-1.0-0.conda  current_repodata.json  index.html  repodata.json
output/linux-64/.cache/: cache.db
output/noarch/: index.html
recipe/: bld.bat  build.sh  meta.yaml
test/: CMakeLists.txt  test_hello.cpp  test_message.cpp
